refactor: break apart Bolt component rendering engines into a shared Component Base + renderers-specific addons. Globally update Bolt Web Components to wire up to the new HyperComponent and PreactComponent subclasses. Update polyfill loader based on latest approach in WebcomponentsJS

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -22,6 +22,7 @@
     {# @TODO: wire this up to use Critical JS #}
     <script>
       {{ inline( assets["bolt-components-critical-fonts.js"], 'wwwDir') }}
+      {{ inline( assets["bolt-components-critical-polyfills.js"], 'wwwDir') }}
     </script>
 
 
