--- a/packages/global/styles/07-utilities/_utilities-spacing.scss
+++ b/packages/global/styles/07-utilities/_utilities-spacing.scss
@@ -8,6 +8,10 @@ $bolt-spacing-sizes-extras: (
 $bolt-spacing-sizes: map-merge($bolt-spacing-sizes-extras, $bolt-spacing-sizes);
 
 
+// @todo: revisit uncommenting out the following lines for a huge performance boost by not outputting the squished and stretched spacing type variations.
+// $bolt-spacing-types: (
+//   ''
+// );
 
 
 // prefix prop name if value set
