--- a/packages/global/styles/07-utilities/_utilities-widths.scss
+++ b/packages/global/styles/07-utilities/_utilities-widths.scss
@@ -9,6 +9,9 @@
 // @include widths(3 4, -sm);
 $bolt-width-sizes: 1 2 3 4 5 6 7 8 9 10 11 12 !default;
 
+//@todo: revisit replacing the above $bolt-width-sizes variable with the version below with fewer options to boost performance.
+// $bolt-width-sizes: 1 2 3 4 6 8 12 !default;
+
 @mixin bolt-widths($widths-columns, $widths-breakpoint: null) {
   // Loop through the number of columns for each denominator of our fractions.
   @each $widths-denominator in $widths-columns {
