--- a/apps/pattern-lab/src/_patterns/02-components/video/-video-autoplay-and-loop.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/-video-autoplay-and-loop.twig
@@ -1,33 +1,11 @@
-{% embed "@bolt/band.twig" with {
-    size: "small",
-    theme: "xdark",
-    fullBleed: true
-  } only %}
-  {% block band_content %}
+<p>
+  This video has <code>autoplay</code> set to <code>true</code> and <code>loop</code> set to <code>true</code>.
+</p>
 
-    {% include "@bolt/button.twig" with {
-        text: "Watch Video",
-        tag: "button",
-        attributes: {
-          "on-click": "toggle",
-          "on-click-target": "pega-video-5205361615001"
-        }
-    } only %}
-
-    {% include "@bolt/video.twig" with {
-      videoId: "5205361615001",
-      accountId: "1900410236",
-      playerId: "r1CAdLzTW",
-      videoUuid: "pega-video-5205361615001",
-      autoplay: true,
-      loop: true,
-      "attributes": {
-        "on-init": "initBrightcovePlugins",
-        "data-email-subject": "Pega - CRM Evolved Atlanta: Customer Engagement in a Digital World",
-        "data-email-body": "Check out this video from Pega",
-        "data-email-videourl": "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
-      }
-    } only %}
-
-  {% endblock %}
-{% endembed %}
+{% include "@bolt/video.twig" with {
+  "videoId": "5780495299001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW",
+  "autoplay": true,
+  "loop": true
+} only %}
