--- a/apps/pattern-lab/src/_patterns/02-components/video/15-video-hide-meta-title.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/15-video-hide-meta-title.twig
@@ -1,5 +1,9 @@
+<p>
+  This video has <code>showMeta</code> set to <code>true</code> and <code>showMetaTitle</code> set to <code>false</code>.
+</p>
+
 {% include "@bolt/video.twig" with {
-  "videoId": "5780495299001",
+  "videoId": "3861325118001",
   "accountId": "1900410236",
   "playerId": "r1CAdLzTW",
   "showMeta": true,
