--- a/apps/pattern-lab/src/_patterns/02-components/video/35-video-w-inline-script-and-external-controls.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/35-video-w-inline-script-and-external-controls.twig
@@ -1,38 +1,24 @@
-{% embed "@bolt/band.twig" with {
-    size: "small",
-    theme: "xdark",
-    fullBleed: true
+<p>
+  This video has external controls and an inline script:
+</p>
+<p>
+  {% include "@bolt/button.twig" with {
+    "text": "Play or pause",
+    "tag": "button",
+    "attributes": {
+      "on-click": "toggle",
+      "on-click-target": "pega-video-3861325118001"
+    }
   } only %}
-  {% block band_content %}
+</p>
 
-    {% include "@bolt/_video-inline-script.twig" with {
-      socialUrl: "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
-    } %}
+{% include "@bolt/_video-inline-script.twig" with {
+  "socialUrl": "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
+} %}
 
-    {% include "@bolt/button.twig" with {
-        text: "Watch Video",
-        tag: "button",
-        attributes: {
-          "on-click": "toggle",
-          "on-click-target": "pega-video-5205361615001"
-        }
-    } only %}
-
-    <br><br>
-
-    {% include "@bolt/video.twig" with {
-      "videoId": "5205361615001",
-      "accountId": "1900410236",
-      "playerId": "r1CAdLzTW",
-      "videoUuid": "pega-video-5205361615001",
-      "attributes": {
-        "on-init": "initBrightcovePlugins",
-        "data-email-subject": "Pega - CRM Evolved Atlanta: Customer Engagement in a Digital World",
-        "data-email-body": "Check out this video from Pega",
-        "data-email-videourl": "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
-      }
-    } only %}
-
-
-  {% endblock %}
-{% endembed %}
+{% include "@bolt/video.twig" with {
+  "videoId": "3861325118001",
+  "accountId": "1900410236",
+  "playerId": "r1CAdLzTW",
+  "videoUuid": "pega-video-3861325118001"
+} only %}
