--- a/apps/pattern-lab/src/_patterns/02-components/video/40-video-as-background-w-inline-script-and-external-controls.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/40-video-as-background-w-inline-script-and-external-controls.twig
@@ -16,10 +16,10 @@
       {
         "pattern": "video",
         "isBackgroundVideo": true,
-        "videoId": "5205361615001",
+        "videoId": "3861325118001",
         "accountId": "1900410236",
         "playerId": "r1CAdLzTW",
-        "videoUuid": "pega-video-5205361615001",
+        "videoUuid": "pega-video-3861325118001",
         "attributes": {
           "on-init": "initBrightcovePlugins",
           "data-email-subject": "Pega - CRM Evolved Atlanta: Customer Engagement in a Digital World",
@@ -31,6 +31,10 @@
   }
 } %}
   {% block band_content %}
+    <p>
+      This video is coming from the band's background.
+    </p>
+
     {% include "@bolt/_video-inline-script.twig" with {
       socialUrl: "https://demo1.d8.pega.com/insights/resources/crm-evolved-atlanta-customer-engagement-digital-world"
     } %}
@@ -40,7 +44,7 @@
         tag: "button",
         attributes: {
           "on-click": "toggle",
-          "on-click-target": "pega-video-5205361615001"
+          "on-click-target": "pega-video-3861325118001"
         }
     } only %}
   {% endblock band_content %}
