--- a/packages/components/bolt-video/src/_videojs-enhancements.scss
+++ b/packages/components/bolt-video/src/_videojs-enhancements.scss
@@ -3,21 +3,30 @@
 
 // Dev Notes
 // 1. [Mai] Because these styles are overrides, they need to be repeated.
+// 2. [Mai] Input font-size needs to be 16px to prevent zooming.
+// 3. [Mai] Hide close captions button.
+// 4. [Mai] Add white space for IE because padding got ignored.
 
 
 $bolt-video-js-button-text-color: bolt-color(white);
 $bolt-video-js-button-background-color: bolt-color(orange);
 $bolt-video-js-button-transition: $bolt-transition;
 $bolt-video-js-button-border-radius: $bolt-border-radius;
-
+$bolt-video-js-button-shadow-color: bolt-color(black);
+$bolt-video-js-button-shadow-level: 'level-30';
 
 @mixin bolt-video-js-button {
   color: $bolt-video-js-button-text-color;
   background-color: $bolt-video-js-button-background-color;
-  transition: opacity $bolt-video-js-button-transition;
+  opacity: 1;
+  transition: all $bolt-video-js-button-transition;
 }
 
 .video-js {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   video,
   .vjs-big-play-button {
     cursor: pointer;
@@ -39,120 +48,139 @@ $bolt-video-js-button-border-radius: $bolt-border-radius;
     font-size: 1.5em;
     border: none;
     border-radius: $bolt-video-js-button-border-radius;
-    opacity: 1;
 
-    &:hover {
-      @include bolt-video-js-button; // [1]
-      opacity: $bolt-global-link-hover-opacity;
-    }
-
-    &:active,
+    &:hover,
     &:focus {
       @include bolt-video-js-button; // [1]
-      opacity: $bolt-global-link-active-opacity;
+      @include bolt-shadow($key: $bolt-video-js-button-shadow-level, $base-color: $bolt-video-js-button-shadow-color);
+    }
+
+    &:active {
+      @include bolt-video-js-button; // [1]
     }
   }
 
-  &:hover .vjs-big-play-button {
-    @include bolt-video-js-button; // [1]
-    opacity: $bolt-global-link-hover-opacity;
-  }
-
-  &:active .vjs-big-play-button,
+  &:hover .vjs-big-play-button,
   &:focus .vjs-big-play-button {
     @include bolt-video-js-button; // [1]
-    opacity: $bolt-global-link-active-opacity;
+    @include bolt-shadow($key: $bolt-video-js-button-shadow-level, $base-color: $bolt-video-js-button-shadow-color);
   }
-}
 
+  &:active .vjs-big-play-button {
+    @include bolt-video-js-button; // [1]
+  }
 
-// Vertically and horizontally center the default Brightcove share overlay content
-.vjs-modal-dialog .vjs-modal-dialog-content {
-  position: relative; // override position: absolute
-  overflow-x: auto; // clearfix floated children
-  height: auto; // override height: 100%
-  max-width: 1024px;
-  max-height: 56.25vw;
-  margin: 0 auto;
-  -webkit-overflow-scrolling: touch;
-}
+  .vjs-poster {
+    background-color: transparent;
+  }
 
-.video-js .vjs-poster {
-  background-color: transparent;
-}
+  .vjs-slider {
+    background: rgba($bolt-video-js-button-background-color, 0.15);
+  }
 
+  .vjs-load-progress,
+  .vjs-load-progress div {
+    background: rgba($bolt-video-js-button-background-color, 0.35);
+  }
 
+  .vjs-playlist-sidebar .vjs-playlist-show-hide button:hover,
+  .vjs-menu-button-popup .vjs-menu .vjs-menu-item.vjs-selected,
+  .vjs-play-progress,
+  .vjs-volume-level {
+    background-color: $bolt-video-js-button-background-color;
+  }
 
+  .vjs-modal-dialog {
+    overflow: hidden;
+    background: rgba(bolt-color(black), 0.9);
 
-.video-js .vjs-control.vjs-close-button {
-  padding: 1.4rem;
+    .vjs-modal-dialog-content {
+      @include bolt-padding(medium large medium medium);
+      @include bolt-font-size(medium);
 
-  > * {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    flex-direction: column;
+      display: flex;
+      justify-content: center;
+      overflow: auto;
 
-    &:before {
-      font-size: 1.4rem;
-      height: auto;
-      width: auto;
-      position: relative;
+      .vjs-social-title,
+      .vjs-social-description {
+        white-space: normal;
+      }
+
+      .vjs-social-title {
+        @include bolt-margin(0 0 xsmall 0);
+        @include bolt-font-size(medium);
+        @include bolt-font-weight(bold);
+      }
+
+      .vjs-social-description {
+        @include bolt-font-size(small);
+      }
+
+      .vjs-social-share-links {
+        margin-right: (bolt-spacing(xsmall) * -1);
+        margin-left: (bolt-spacing(xsmall) * -1);
+      }
+
+      .vjs-social-share-link {
+        @include bolt-margin(xsmall);
+      }
+
+      .vjs-social-label-text {
+        @include bolt-font-size(xsmall);
+      }
+
+      form {
+        @include bolt-margin(auto);
+
+        max-width: 66ch;
+
+        input[type='text'] {
+          font-size: 16px; // [2]
+        }
+
+        label {
+          @include bolt-padding(0);
+
+          width: 100%;
+        }
+
+        > * {
+          @include bolt-margin(0 0 small 0);
+
+          &:last-child {
+            @include bolt-margin(0);
+            @include bolt-padding-bottom(medium); // [4]
+          }
+        }
+      }
+    }
+  }
+
+  .vjs-control.vjs-close-button {
+    width: bolt-spacing(large);
+    height: bolt-spacing(large);
+
+    > * {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      &:before {
+        position: relative;
+        width: auto;
+        height: auto;
+        font-size: 1.4rem;
+      }
     }
   }
 }
 
-.vjs-social-overlay .vjs-social-direct-link input, .vjs-social-overlay .vjs-social-embed-code input, .vjs-social-overlay .vjs-social-start-from input {
-  font-size: 16px; // min 16px to prevent zooming
-}
-
-.video-js {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.video-js .vjs-modal-dialog {
-  overflow: auto; // so psuedo layer below shows up
-  box-sizing: border-box;
-  z-index: bolt-z-index('nav');
-  max-width: 768px;
-  margin: 0 auto;
-  overflow: visible; // override default overflow: hidden
-  background: transparent; // override default gradient so the psuedo layer is the only backgrond showing up
-  position: absolute; // override position: absolute
-  height: auto; // override height: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
-
-  &:before {
-    content: '';
-    display: block;
-    background-color: rgba(bolt-color(black), 0.8);
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-    bottom: -9990px;
-    right: -9990px;
-    opacity: 1;
-    pointer-events: none;
-  }
-}
-
-.vjs-social-overlay .vjs-social-description,
-.vjs-social-overlay .vjs-social-title {
-  white-space: normal;
-}
-
-// Hide close captions button
 .vjs-subs-caps-button {
-  display: none;
+  display: none; // [3]
 }
