--- a/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
@@ -4,6 +4,12 @@
 } only %}
 
 {% include "@bolt-components-headline/headline.twig" with {
+  text: "This headline is also a link, still with Default Icon",
+  url: "https://www.google.com",
+  icon: null
+} only %}
+
+{% include "@bolt-components-headline/headline.twig" with {
   text: "This headline is also a link, with Defined Icon",
   url: "https://www.google.com",
   icon: {
