fix: IE share dialog postion fix and additional docs

--- a/apps/pattern-lab/src/_patterns/02-components/video/30-video-w-inline-script.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/30-video-w-inline-script.twig
@@ -9,11 +9,5 @@
 {% include "@bolt/video.twig" with {
   "videoId": "3861325118001",
   "accountId": "1900410236",
-  "playerId": "r1CAdLzTW",
-  "attributes": {
-    "on-init": "initBrightcovePlugins",
-    "data-email-subject": "Pega - Intelligent Virtual Assistant for Email",
-    "data-email-body": "Check out this video from Pega",
-    "data-email-videourl": "https://local.d8.pega.com/insights/resources/intelligent-virtual-assistant-email"
-  }
+  "playerId": "r1CAdLzTW"
 } only %}
