refactor: disabling icon logic from new text component until work is wrapped up decoupling the two components.

--- a/apps/pattern-lab/src/_patterns/02-components/text/-20-text-icon-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/-20-text-icon-variations.twig
@@ -1,4 +1,6 @@
-{% include "@bolt-components-text/text.twig" with {
+{# @todo: uncomment once done decoupling from icon component #}
+
+{# {% include "@bolt-components-text/text.twig" with {
   text: "Headline Postfixed with Icon",
   headline: true,
   icon: {
@@ -59,4 +61,4 @@
       align: "left"
     }
   } only %}
-</div>
+</div> #}
