--- a/packages/global/styles/07-utilities/_utilities-spacing.scss
+++ b/packages/global/styles/07-utilities/_utilities-spacing.scss
@@ -1,7 +1,7 @@
 // Add additional spacing size rules for handling auto and zero'd rules
 $bolt-spacing-sizes-extras: (
   'none': 0,
-  'auto': 'auto'
+  'auto': auto
 );
 
 // Merge extra size options into Sass Map of sizes that already exist, tacking on to the front
