--- a/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/default-template.twig" %}
+{% extends "@pl/default-template.twig" %}
 
 {% macro link(text, href, attributes) %}
   {% include "@bolt/link.twig" with {
