--- a/apps/pattern-lab/src/_patterns/04-pages/70-d8-agenda-manager/-agenda-manager-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/70-d8-agenda-manager/-agenda-manager-detail.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/default-template.twig" %}
+{% extends "@pl/default-template.twig" %}
 
 {% block global_header %}
   {% embed "@bolt/band.twig" with {
