--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t2-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t2-page.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/default-template.twig" %}
+{% extends "@pl/default-template.twig" %}
 
 {% block global_header %}
   {% include "@bolt/_page-header.twig" %}
