--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -30,6 +30,12 @@ bolt-navbar {
     padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-small);
   }
 
+  @supports (display: contents) {
+    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
+      @include bolt-padding-top(0);
+    }
+  }
+
   // @include bolt-padding-top($bolt-navbar-vspacing-small);
   max-width: bolt-breakpoint(xxlarge);
   margin: 0 auto;
@@ -74,6 +80,7 @@ bolt-navbar {
 
     > *:first-child {
       @include bolt-padding-top($bolt-navbar-vspacing-xsmall); /* [1] */
+      align-self: center;
 
       @supports(--css: variables) {
         padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-xsmall);
@@ -92,15 +99,12 @@ bolt-navbar {
   }
 
   &--small {
-    @include bolt-padding-top(xsmall);
-
     > * {
       @include bolt-padding-bottom($bolt-navbar-vspacing-xsmall); /* [1] */
     }
 
     @supports(--css: variables) {
       --bolt-vspacing: #{bolt-v-spacing(xsmall)};
-      padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-xsmall);
     }
   }
 }
@@ -129,7 +133,12 @@ bolt-navbar {
 
   @supports (display: contents) {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
+      @include bolt-padding-top($bolt-navbar-vspacing-small);
       grid-column: 2/span 1;
+
+      @supports(--css: variables) {
+        padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-small);
+      }
     }
   }
 
