fix: upgrade original pattern lab styleguidekit component scripts to address most JS errors being thrown with refactor

--- a/packages/styleguidekit-assets-bolt/src/html/index.twig
+++ b/packages/styleguidekit-assets-bolt/src/html/index.twig
@@ -5,7 +5,7 @@
 	<title id="title">Pattern Lab</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="styleguide/css/pattern-lab.css" media="all" />
+	<link rel="stylesheet" href="build/pattern-lab.css" media="all" />
 </head>
 
 <body class="pl-c-body">
@@ -71,12 +71,12 @@
 	<script src="styleguide/bower_components/script.min.js"></script> -->
 
 	<!-- set-up the dispatcher -->
-	<script>
+	{# <script>
 		var Dispatcher = new EventEmitter();
-	</script>
+	</script> #}
 
 	<!-- load the Pattern Lab viewer js -->
-	<script src="styleguide/js/patternlab-viewer.js"></script>
+	<script src="build/patternlab-viewer.js"></script>
 
 </body>
 
