fix: fix misc JavaScript errors due to poor scoping / variable definitions

--- a/packages/styleguidekit-twig-default/views/partials/general-header.twig
+++ b/packages/styleguidekit-twig-default/views/partials/general-header.twig
@@ -7,4 +7,4 @@
 
 <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?{{ cacheBuster }}" media="all">
 <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?{{ cacheBuster }}" media="all" /> #}
-<link rel="stylesheet" href="../../styleguide/css/pattern-lab.css?{{ cacheBuster }}" media="all">
+<link rel="stylesheet" href="../../build/pattern-lab.css?{{ cacheBuster }}" media="all">
