--- a/packages/styleguidekit-twig-default/views/partials/general-footer.twig
+++ b/packages/styleguidekit-twig-default/views/partials/general-footer.twig
@@ -49,7 +49,7 @@
   (function() {
     if (self != top) {
       var cb = '{{ cacheBuster}}';
-      var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
+      var js = [ { 'src': 'build/patternlab-pattern.js' } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
   })();
