refactor: remove jwerty and replace with Mousetrap, bug fixes and misc cleanup/Users/sghoweri/sites/bolt-v2/packages/styleguidekit-assets-bolt/src/utils/postmessage.js

--- a/packages/styleguidekit-assets-bolt/src/sass/scss/abstracts/_variables.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/abstracts/_variables.scss
@@ -39,7 +39,8 @@ $pl-space: 1rem;
 $pl-doublespace: $pl-space*2;
 $pl-pad: 1rem;
 $pl-pad-half: $pl-pad/2;
-$offset-top: 2rem;
+// $offset-top: 2rem;
+$offset-top: 0;
 
 // Breakpoints
 $pl-bp-med: 42em;
