--- a/packages/styleguidekit-assets-bolt/src/html/partials/base-template.twig
+++ b/packages/styleguidekit-assets-bolt/src/html/partials/base-template.twig
@@ -98,8 +98,8 @@
         <ul class="pl-c-tabs__list">
           {{# panels }}
           <li class="pl-c-tabs__list-item">
-            <a class="pl-c-tabs__link pl-js-tab-link" href="#pl-{{ patternPartial }}-{{ id }}-panel" id="pl-{{ patternPartial }}-{{ id }}-tab"
-              data-patternpartial="{{ patternPartial }}" data-panelid="{{ id }}">{{ name }}</a>
+            <button class="pl-c-tabs__link pl-js-tab-link" href="#pl-{{ patternPartial }}-{{ id }}-panel" id="pl-{{ patternPartial }}-{{ id }}-tab"
+              data-patternpartial="{{ patternPartial }}" data-panelid="{{ id }}">{{ name }}</button>
           </li><!--end pl-c-tabs__list-item-->
           {{/ panels }}
         </ul><!--end pl-c-tabs__list-->
@@ -109,7 +109,7 @@
 
         {{# panels }}
         <div id="pl-{{ patternPartial }}-{{ id }}-panel" class="pl-c-tabs__panel pl-js-tab-panel">
-          <button class="pl-c-code-copy-btn pl-js-code-copy-btn" data-clipboard-target="#pl-{{ patternPartial }}-{{ id }}-panel code">Copy</button>
+          <button class="pl-c-code-copy-btn pl-js-code-copy-btn" data-clipboard-target="#pl-{{ patternPartial }}-{{ id }}-panel">Copy</button>
 
           {{{ content }}}
         </div><!--end pl-c-tabs__panel-->
