refactor: simplify navbar hover / active animation states to use opacity + currentColor. Addresses contrast issues seen on ligher themes with initial implementation

--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -4,8 +4,7 @@
    Navlink
 \* ------------------------------------ */
 
-$bolt-navlink-bg-color: rgba(bolt-color(gray, xlight), 0.1);
-$bolt-navlink-bg-color-active: rgba(bolt-color(gray, xlight), 0.2);
+$bolt-navlink-bg-color: currentColor;
 $bolt-navlink-bg-border-radius: $bolt-border-radius;
 $bolt-navlink-bg-transition-timing: $bolt-transition-timing*4;
 $bolt-navlink-text-transition: $bolt-transition;
@@ -47,14 +46,16 @@ bolt-navlink {
     height: 100%;
     content: '';
     border-radius: $bolt-navlink-bg-border-radius;
-    background-color: $bolt-navlink-bg-color;
+    background-color: currentColor;
+    opacity: 0.1;
     transform: scale3d(0, 0, 0);
     transition: all 0.1s ease;
   }
 
   &:active:before {
-    background-color: $bolt-navlink-bg-color-active;
     transform: scale3d(1, 1, 1);
+    opacity: 0.2;
+    animation: none;
   }
 
   &:hover,
