--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -11,6 +11,7 @@ $bolt-navbar-vspacing-small: bolt-v-spacing(small);
 $bolt-navbar-vspacing-xsmall: bolt-v-spacing(xsmall);
 
 bolt-navbar {
+  @include bolt-z-index(nav);
   @include bolt-full-bleed; // @todo: make full bleed optional?
   @supports(--css: variables) {
     --bolt-vspacing: #{$bolt-navbar-vspacing-small};
@@ -28,6 +29,12 @@ bolt-navbar {
 
   @supports(--css: variables) {
     padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-small);
+  }
+
+  @supports (display: contents) {
+    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
+      @include bolt-padding-top(0);
+    }
   }
 
   // @include bolt-padding-top($bolt-navbar-vspacing-small);
@@ -74,6 +81,7 @@ bolt-navbar {
 
     > *:first-child {
       @include bolt-padding-top($bolt-navbar-vspacing-xsmall); /* [1] */
+      align-self: center;
 
       @supports(--css: variables) {
         padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-xsmall);
@@ -92,15 +100,12 @@ bolt-navbar {
   }
 
   &--small {
-    @include bolt-padding-top(xsmall);
-
     > * {
       @include bolt-padding-bottom($bolt-navbar-vspacing-xsmall); /* [1] */
     }
 
     @supports(--css: variables) {
       --bolt-vspacing: #{bolt-v-spacing(xsmall)};
-      padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-xsmall);
     }
   }
 }
@@ -129,7 +134,12 @@ bolt-navbar {
 
   @supports (display: contents) {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
+      @include bolt-padding-top($bolt-navbar-vspacing-small);
       grid-column: 2/span 1;
+
+      @supports(--css: variables) {
+        padding-top: var(--bolt-vspacing, $bolt-navbar-vspacing-small);
+      }
     }
   }
 
